[package]
name = "ruge" #rust micro game engine
version = "0.1.0"
edition = "2021"



[workspace]
resolver = "2"
members = [
    "microengine",
    "gl_utils",
]

[dependencies]
microengine = { path="./microengine" }
gl_utils = { path="./gl_utils" }

[[example]]
name = "task_03"
path = "examples/task_03/main.rs"
[[example]]
name = "3d_maze"
path = "examples/3d_maze/main.rs"
[[example]]
name = "volcano"
path = "examples/volcano/main.rs"
[[example]]
name = "earth"
path = "examples/earth/main.rs"

[dev-dependencies]
clap = { version = "4.4.10", features = ["derive"] }
gl = "0.14.0"
nalgebra-glm = "0.18.0"
rand = "0.8.5"
rng = "0.1.0"
