[package]
name = "ruge" #rust micro game engine
version = "0.1.0"
edition = "2021"



[workspace]
resolver = "2"
members = [
    "microengine",
    "gl_utils",
]

[dependencies]
microengine = { path="./microengine" }
gl_utils = { path="./gl_utils" }

[[example]]
name = "rotating_cube"
path = "examples/rotating_cube/src/main.rs"

[dev-dependencies]
gl = "0.14.0"
nalgebra-glm = "0.18.0"
